Lower DESCRIBE to construct-like KGRAM query